--- a/src/components/Layouts/Navbar.scss
+++ b/src/components/Layouts/Navbar.scss
@@ -8,7 +8,14 @@
 
     //Logo
     .logo{
-        width: 200px !important;
+        width: 200px;
         height: auto;
+    }
+}
+
+//Media Queries
+@media only screen and (max-width: 1200px) {
+    .logo{
+        width: 150px !important;
     }
 }
