--- a/src/components/Layouts/Herosection.scss
+++ b/src/components/Layouts/Herosection.scss
@@ -80,7 +80,7 @@
         }
         p{
             line-height: 2;
-            opacity: .7;
+            opacity: .8;
             font-size: .945rem;
         }
 
@@ -150,5 +150,12 @@
                 padding: 1rem 2rem;
             }
         }
+    }
+  }
+
+  //Media Queries for Icons on Mobiles 
+  @media only screen and (max-width: 600px){
+    .herosection{
+        background: red;
     }
   }
