--- a/src/components/Layouts/Herosection.scss
+++ b/src/components/Layouts/Herosection.scss
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap');
 @import '../../styles/colors.scss';
 
 .herosection{
-    background: $primary-color;
+    background: transparent;
     height: 100vh;
-    color: #fff;
+    // color: #fff;
     padding: 2rem 0;
     position: relative;
 
@@ -71,17 +71,19 @@
     .herosection__content{
         padding-top: 5rem;
         h1{
-            font-family: "Mulish" !important;
+            font-family: "Manrope" !important;
             padding-bottom: 1.5rem;
             text-transform: capitalize;
-            line-height: 1.2;
-            font-size: 3.2rem;
-            font-weight: 900;
+            line-height: 1.4;
+            font-size: 2.4rem;
+            font-weight: bolder;
+            color: $primary-color;
         }
         p{
-            line-height: 2;
-            opacity: .8;
-            font-size: .945rem;
+            line-height: 1.7;
+            font-size: 1rem;
+            color: #888888;
+            font-weight: 600;
         }
 
         //Form
