--- a/src/components/Layouts/Navbar.scss
+++ b/src/components/Layouts/Navbar.scss
@@ -2,7 +2,7 @@
 @import '../../styles/colors.scss';
 
 .navbar{
-    background: $primary-color;
+    background: transparent;
     padding: 1rem 0;
     color: #fff;
 
