--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,7 +2,7 @@
 @import './colors.scss';
 
 // Bring in Google Font style to be used
-@import url('https://fonts.googleapis.com/css2?family=Mulish&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
 
 *{
     padding: 0;
@@ -11,6 +11,6 @@
 }
 
 body{
-    font-family: "Mulish";
+    font-family: "Manrope";
     overflow-x: hidden !important;
 }
