--- a/src/components/Layouts/Herosection.scss
+++ b/src/components/Layouts/Herosection.scss
@@ -74,42 +74,65 @@
             font-family: "Manrope" !important;
             padding-bottom: 1.5rem;
             text-transform: capitalize;
-            line-height: 1.4;
-            font-size: 2.4rem;
+            line-height: 1.3;
+            font-size: 2.5rem;
             font-weight: bolder;
             color: $primary-color;
         }
         p{
             line-height: 1.7;
             font-size: 1rem;
-            color: #888888;
-            font-weight: 600;
+            color: $primary-color;
+            opacity: .7;
         }
 
         //Form
         .waitlist__form{
             padding-top: 1rem;
             input{
-                width: 65%;
-                height: 3.5rem !important;
+                height: 3.2rem !important;
                 box-shadow: none;
                 margin-right: 1rem;
-                color: #627086;
-                border-radius: 6px;
+                color: $primary-color;
+                opacity: .7;
+                border-radius: 5px;
+                outline-color: $primary-color;
                 &::placeholder{ 
-                    color: #627086;
-                    font-weight: 500;
+                    color: $primary-color;
+                    font-weight: 400;
+                    opacity: .7;
+                }
+                &:focus{
+                    border-color: rgb(223, 219, 219) !important;
                 }
             }
             .submit__btn{
                 background: $secondary-color;
-                color: #fff;
                 border: none;
-                width: 35%;
-                border-radius: 4px;
-                font-weight: 400;
+                border-radius: 5px;
+                margin-top: 1rem;
+                padding: 1rem 2rem;
+                width: 100%;
+                color: #fff;
+                font-size: 14px;
+                span{
+                    padding: 0px 25px;
+                    font-weight: 500;
+                    width: 60%;
+                    opacity: .9999;
+                    text-transform: uppercase;
+                }
+                &:hover{
+                    background: $primary-color;
+                    transition: all ease-in .5s;
+                }
             }
         }
+    }
+
+    //Men image
+    .men{
+        border-radius: 8px;
     }
 
     //Move-balls Animation Styles
@@ -127,7 +150,7 @@
  @media only screen and (max-width: 1200px) {
     .herosection{
         height: auto;
-        padding: 2rem 1.1rem;
+        padding: 1.7rem .7rem;
         .herosection__content{
             padding-top: 3rem !important;
             h1{
@@ -162,6 +185,11 @@
         h1{
             opacity: 1 !important;
         }
+
+        .phone{
+            margin-top: 1rem;
+        }
+        
         //Icon holders
     .herosection__icons__holder{
         position: absolute;
