Fixed double props issue

--- a/src/components/Layouts/Herosection.scss
+++ b/src/components/Layouts/Herosection.scss
@@ -186,7 +186,7 @@
             opacity: 1 !important;
         }
 
-        .phone{
+        .phoneHolder{
             margin-top: 1rem;
         }
         
