--- a/src/components/Layouts/Herosection.scss
+++ b/src/components/Layouts/Herosection.scss
@@ -150,11 +150,11 @@
  @media only screen and (max-width: 1200px) {
     .herosection{
         height: auto;
-        padding: 1.7rem .7rem;
+        padding: 2rem .7rem;
         .herosection__content{
             padding-top: 3rem !important;
             h1{
-                font-size: 2rem !important;
+                font-size: 2rem;
                 line-height: 1.5;
             }
         }
@@ -184,6 +184,8 @@
         overflow-x: hidden !important;
         h1{
             opacity: 1 !important;
+            font-size: 1.6rem !important;
+            padding-bottom: .5rem !important;
         }
 
         .phoneHolder{
