Fixes to mobile responsiveness

--- a/src/components/Layouts/Herosection.scss
+++ b/src/components/Layouts/Herosection.scss
@@ -189,6 +189,9 @@
                 font-size: 1.6rem !important;
                 padding-bottom: .5rem !important;
             }
+            p{
+                opacity: .5 !important;
+            }
         }
 
         .phoneHolder{
