Changed font to mulish

--- a/src/components/Layouts/Herosection.scss
+++ b/src/components/Layouts/Herosection.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@800&display=swap');
 @import '../../styles/colors.scss';
 
 .herosection{
@@ -71,7 +71,7 @@
     .herosection__content{
         padding-top: 5rem;
         h1{
-            font-family: "Manrope" !important;
+            font-family: "Mulish" !important;
             padding-bottom: 1.5rem;
             text-transform: capitalize;
             line-height: 1.3;
