--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,7 +2,7 @@
 @import './colors.scss';
 
 // Bring in Google Font style to be used
-@import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish&display=swap');
 
 *{
     padding: 0;
@@ -11,7 +11,7 @@
 }
 
 body{
-    font-family: "Manrope";
+    font-family: "Mulish";
     overflow-x: hidden !important;
     font-style: normal;
 }
