--- a/src/components/Layouts/Herosection.scss
+++ b/src/components/Layouts/Herosection.scss
@@ -69,13 +69,13 @@
 
     //Content
     .herosection__content{
-        padding-top: 5rem;
+        padding-top: 2rem;
         h1{
             font-family: "Mulish" !important;
-            padding-bottom: 1.5rem;
+            padding-bottom: 1rem;
             text-transform: capitalize;
             line-height: 1.3;
-            font-size: 2.5rem;
+            font-size: 2.2rem;
             font-weight: bolder;
             color: $primary-color;
         }
@@ -89,7 +89,7 @@
         //Form
         .waitlist__form{
             padding-top: 1rem;
-            input{
+            input, select {
                 height: 3.2rem !important;
                 box-shadow: none;
                 margin-right: 1rem;
@@ -106,6 +106,10 @@
                     border-color: rgb(223, 219, 219) !important;
                 }
             }
+
+            select{
+                opacity: .6 !important;
+            }
             .submit__btn{
                 background: $secondary-color;
                 border: none;
@@ -119,7 +123,6 @@
                     padding: 0px 25px;
                     font-weight: 500;
                     width: 60%;
-                    opacity: .9999;
                     text-transform: uppercase;
                 }
                 &:hover{
