--- a/src/components/Layouts/Herosection.scss
+++ b/src/components/Layouts/Herosection.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@700&display=swap');
 @import '../../styles/colors.scss';
 
 .herosection{
@@ -71,19 +72,19 @@
     .herosection__content{
         padding-top: 2rem;
         h1{
-            font-family: "Mulish" !important;
+            font-family: "Nunito Sans" !important;
             padding-bottom: 1rem;
             text-transform: capitalize;
             line-height: 1.3;
             font-size: 2.2rem;
-            font-weight: bolder;
+            font-weight: bold;
             color: $primary-color;
         }
         p{
-            line-height: 1.7;
-            font-size: 1rem;
+            line-height: 1.9;
+            font-size: .92rem;
             color: $primary-color;
-            opacity: .7;
+            opacity: .6;
         }
 
         //Form
@@ -101,6 +102,7 @@
                     color: $primary-color;
                     font-weight: 400;
                     opacity: .7;
+                    font-size: .92rem !important;
                 }
                 &:focus{
                     border-color: rgb(223, 219, 219) !important;
@@ -121,8 +123,7 @@
                 font-size: 14px;
                 span{
                     padding: 0px 25px;
-                    font-weight: 500;
-                    width: 60%;
+                    font-weight: 400;
                     text-transform: uppercase;
                 }
                 &:hover{
