--- a/src/components/Layouts/Herosection.scss
+++ b/src/components/Layouts/Herosection.scss
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@700&display=swap');
 @import '../../styles/colors.scss';
 
 .herosection{
-    background: transparent;
+    background: $primary-color;
     height: 100vh;
-    // color: #fff;
+    color: #fff;
     padding: 2rem 0;
     position: relative;
 
@@ -16,7 +16,7 @@
             position: absolute;
         }
         .round-icon{
-            top: 70px;
+            top: 50px;
             left: 102px;
         }
         .pattern1{
@@ -70,21 +70,20 @@
 
     //Content
     .herosection__content{
-        padding-top: 2rem;
+        padding-top: 4rem;
         h1{
-            font-family: "Nunito Sans" !important;
+            font-family: "Mulish" !important;
             padding-bottom: 1rem;
             text-transform: capitalize;
-            line-height: 1.3;
-            font-size: 2.2rem;
-            font-weight: bold;
-            color: $primary-color;
+            line-height: 1.2;
+            font-size: 2.5rem;
+            font-weight: 900;
+            color: #fff
         }
         p{
             line-height: 1.9;
             font-size: .92rem;
-            color: $primary-color;
-            opacity: .6;
+            opacity: .8;
         }
 
         //Form
@@ -94,14 +93,14 @@
                 height: 3.2rem !important;
                 box-shadow: none;
                 margin-right: 1rem;
-                color: $primary-color;
-                opacity: .7;
+                // color: $primary-color;
+                // opacity: .7;
                 border-radius: 5px;
                 outline-color: $primary-color;
                 &::placeholder{ 
                     color: $primary-color;
                     font-weight: 400;
-                    opacity: .7;
+                    opacity: .9;
                     font-size: .92rem !important;
                 }
                 &:focus{
@@ -110,7 +109,11 @@
             }
 
             select{
-                opacity: .6 !important;
+                background: #fff;
+                color: $primary-color;
+                font-weight: 400;
+                font-size: .92rem !important;
+                
             }
             .submit__btn{
                 background: $secondary-color;
@@ -194,7 +197,7 @@
                 padding-bottom: .5rem !important;
             }
             p{
-                opacity: .5 !important;
+                opacity: .8 !important;
             }
         }
 
@@ -260,6 +263,6 @@
         color: $secondary-color;
     }
     .tel{
-        color: $primary-color;
+        color: #fff;
     }
   }
