--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,7 +3,7 @@
 
 // Bring in Google Font style to be used
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish&display=swap');
 
 *{
     padding: 0;
@@ -12,7 +12,7 @@
 }
 
 body{
-    font-family: "Nunito Sans" !important;
+    font-family: "Mulish" !important;
     overflow-x: hidden !important;
     font-style: normal;
 }
