--- a/src/components/Layouts/Navbar.scss
+++ b/src/components/Layouts/Navbar.scss
@@ -3,12 +3,12 @@
 
 .navbar{
     background: $primary-color;
-    padding: 1rem 0;
+    padding-top: 4rem;
     color: #fff;
 
     //Logo
     .logo{
-        width: 180px;
+        width: 120px;
         height: auto;
     }
 }
