--- a/src/components/Layouts/Herosection.scss
+++ b/src/components/Layouts/Herosection.scss
@@ -5,7 +5,7 @@
     background: $primary-color;
     height: 100vh;
     color: #fff;
-    padding: 2rem 0;
+    // padding: 2rem 0;
     position: relative;
 
     //Icon holders
@@ -69,7 +69,7 @@
 
     //Content
     .herosection__content{
-        padding-top: 4rem;
+        // padding-top: 4rem;
         h1{
             font-family: "DM Sans" !important;
             padding-bottom: 1rem;
@@ -87,7 +87,7 @@
 
         //Form
         .waitlist__form{
-            padding-top: 1rem;
+            // padding-top: 1rem;
             input, select {
                 height: 3.2rem !important;
                 box-shadow: none;
