--- a/src/components/Layouts/Herosection.scss
+++ b/src/components/Layouts/Herosection.scss
@@ -156,9 +156,9 @@
  @media only screen and (max-width: 1200px) {
     .herosection{
         height: auto;
-        padding: 2rem .7rem;
+        // padding: 2rem .7rem;
         .herosection__content{
-            padding-top: 3rem !important;
+            // padding-top: 3rem !important;
             h1{
                 font-size: 2rem;
                 line-height: 1.5;
