--- a/src/components/Layouts/Navbar.scss
+++ b/src/components/Layouts/Navbar.scss
@@ -3,12 +3,12 @@
 
 .navbar{
     background: $primary-color;
-    // padding-top: 4rem;
+    padding-top: 4rem;
     color: #fff;
 
     //Logo
     .logo{
-        width: 250px;
+        width: 150px;
         height: auto;
     }
 }
